revise display in Chinese, limit input length, remove nav ul

--- a/client/views/partials/babyProfile.ejs
+++ b/client/views/partials/babyProfile.ejs
@@ -14,7 +14,7 @@
     style="background-color: orange"
     value="<%=babyData.id%>"
   >
-    <img src="<%=babyData.headshot%>" alt="Profile Headshot" title="<%=profilePicTitle%>>"/>
+    <img src="<%=babyData.headshot%>" alt="Profile Headshot" title="<%=profilePicTitle%>"/>
   </div>
   <div class="upload-btn-wrapper" style="display: none;">
     <input type="file" id="profileInput" name="profile" accept="image/*" />
@@ -26,7 +26,7 @@
     <% } else { %>
       <h4><%=babyData.name%></h4>
     <% } %>
-    <p><%=babyData.old%> | <%=babyData.followsCount%> family memebers</p>
+    <p><%=babyData.old%> | <%=babyData.followsCount%> 位家庭成員</p>
   </div>
 </div>
 
