--- a/client/views/partials/userFirstFollow.ejs
+++ b/client/views/partials/userFirstFollow.ejs
@@ -24,6 +24,7 @@
         placeholder="寶寶怎麼稱呼您?"
         name="call"
         value="媽媽"
+        maxlength="10"
         required
       />
     </div>
@@ -37,11 +38,12 @@
         placeholder="請輸入寶寶代碼"
         name="babyId"
         value="1682294400000"
+        maxlength="20"
         required
       />
     </div>
     <br />
-    <button type="submit" class="sign-btn sign-btn-primary">Follow</button>
+    <button type="submit" class="sign-btn sign-btn-primary">追蹤寶寶</button>
     <p class="showNewBabyLink">沒有寶寶代碼，我要<a class="newBaby-a">新增寶寶</a></p>
   </form>
 </div>
