--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -22,6 +22,7 @@ ul {
 }
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 .col {
   padding-right: 1em;
@@ -293,7 +294,6 @@ input[type="number"] {
 .post-content,
 .age-tree {
   height: 100%;
-  overflow-y: auto;
 }
 .baby-list {
   flex: 0 0 20%;
