--- a/client/views/partials/babyNav.ejs
+++ b/client/views/partials/babyNav.ejs
@@ -4,16 +4,16 @@
     style="display: flex; flex-direction: row"
   >
     <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link imageBlock" href="#">Timeline</a>
+      <a class="nav-link imageBlock" href="#">時光軌跡</a>
     </li>
     <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link diaryBlock" href="#">Diary</a>
+      <a class="nav-link diaryBlock" href="#">生活日誌</a>
     </li>
     <!-- <li class="nav-item" style="padding: 0 0.5rem">
       <a class="nav-link tagsBlock" href="#">Tags</a>
     </li> -->
     <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link healthBlock">Health</a>
+      <a class="nav-link healthBlock">寶寶紀錄</a>
     </li>
   </ul>
 </div>
