--- a/client/views/partials/userNewBaby.ejs
+++ b/client/views/partials/userNewBaby.ejs
@@ -6,10 +6,9 @@
           class="sign-control"
             id="inputBabyRole"
             name="babyRole"
-            value="family"
+            value="manager"
           />
-              <!-- <option value="manager">父母</option> -->
-              <option value="family">家人</option>
+              <option value="manager">父母</option>
           </select>
       </div>
       <br />
@@ -23,6 +22,7 @@
           placeholder="寶寶怎麼稱呼您?"
           name="babyCall"
           value="媽媽"
+          maxlength="10"
           required
         />
       </div>
@@ -35,6 +35,7 @@
           id="inputBabyName"
           placeholder="請輸入寶寶名稱"
           name="babyName"
+          maxlength="10"
           value="Ivy"
           required
         />
@@ -64,17 +65,6 @@
         />
       </div>
       <br />
-      <!-- <div class="sign-group">
-        <label for="inputBabyId">寶寶代碼</label>
-        <input
-          class="sign-control"
-          type="number"
-          id="inputBabyId"
-          placeholder="請輸入寶寶代碼"
-          name="babyId"
-        />
-      </div>
-      <br /> -->
       <div class="sign-group">
         <div class="showBabyTrainBox">
             <input id="showBabyTrain" type="checkbox" onclick="showBabyTrainBox()"/>
@@ -135,7 +125,7 @@
         </div>
       </div>
       <br />
-      <button type="submit" class="sign-btn sign-btn-primary">New Baby</button>
+      <button type="submit" class="sign-btn sign-btn-primary">新增寶寶</button>
       <p>已有寶寶代碼，我要<a class="followBaby-a">追蹤寶寶</a></p>
     </form>
   </div>
