--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -232,6 +232,7 @@ input[type="number"] {
                  Nav
 ==================================== */
 .sticky-top {
+  background-color: white;
   position: sticky;
   top: 0;
   z-index: 10;
@@ -243,7 +244,7 @@ input[type="number"] {
   content: url("/public/images/member-hover.png");
 }
 /* ================================= 
-               Baby List
+               Baby Form
 ==================================== */
 .babyFollow,
 .myBotDiv {
@@ -293,7 +294,7 @@ input[type="number"] {
 .baby-list,
 .post-content,
 .age-tree {
-  height: 100%;
+  height: auto;
 }
 .baby-list {
   flex: 0 0 20%;
@@ -334,6 +335,26 @@ input[type="number"] {
 }
 .ulHide {
   display: none;
+}
+.fixedBtn {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 20%;
+  right: 25px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.toTop{
+  bottom: 10%;
+}
+.robot{
+  bottom: 2%;
 }
 /* ================================= 
             Baby Profile
@@ -380,6 +401,23 @@ input[type="number"] {
 }
 .upload-btn-wrapper input[type="file"] {
   display: none;
+}
+.babyNav ul{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+  border-radius: .25rem;  
+}
+.nav-item {
+  flex: 1 1 100px;
+  text-align: center;
+  font-weight: 500;
+}
+.nav-item i{
+  margin-right: 0.5rem;
+}
+.navSelected{
+  background-color: #f1f1f1;
 }
 /* ================================= 
         Timeline Container
