--- a/client/views/partials/babyAgeTree.ejs
+++ b/client/views/partials/babyAgeTree.ejs
@@ -19,4 +19,10 @@
       </li>
     </ul>
   </div>
+  <div class="fixedBtn toTop">
+    <a href="#"><i class="fa-solid fa-chevron-up"></i></a>    
+  </div>
+  <div class="fixedBtn robot">
+    <a class="addMyBot" href="#"><i class="fa-solid fa-robot"></i></a>    
+  </div>
 </div>
