--- a/client/views/partials/babyNav.ejs
+++ b/client/views/partials/babyNav.ejs
@@ -3,17 +3,17 @@
     class="navbar-nav mx-auto ulShow"
     style="display: flex; flex-direction: row"
   >
-    <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link imageBlock" href="#">時光軌跡</a>
+    <li class="nav-item navSelected" style="padding: 0 0.5rem">      
+      <a class="nav-link imageBlock" href="#"><i class="fa-solid fa-camera-retro"></i>時光軌跡</a>
     </li>
     <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link diaryBlock" href="#">生活日誌</a>
+      <a class="nav-link diaryBlock" href="#"><i class="fa-solid fa-pencil"></i>生活日誌</a>
     </li>
     <!-- <li class="nav-item" style="padding: 0 0.5rem">
       <a class="nav-link tagsBlock" href="#">Tags</a>
     </li> -->
     <li class="nav-item" style="padding: 0 0.5rem">
-      <a class="nav-link healthBlock">寶寶紀錄</a>
+      <a class="nav-link healthBlock"><i class="fa-solid fa-chart-line"></i>寶寶紀錄</a>
     </li>
   </ul>
 </div>
