--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -164,12 +164,14 @@ input[type="number"] {
   background-color: #0b5ed7;
   border-color: #0a58ca;
 }
-#lineBtn {
+#lineBtn,
+#nativeLineBtn {
   background-color: #06c755;
   color: white;
   font-weight: bolder;
 }
-#lineBtn:hover {
+#lineBtn:hover,
+#nativeLineBtn:hover {
   background-color: #05b34c;
 }
 
@@ -363,6 +365,7 @@ input[type="number"] {
   /* width: calc(75% - 150px); */
   flex: 0 0 65%;
   max-width: 65%;
+  min-width: 65vw;
   padding: 0 1rem;
 }
 .profile {
@@ -420,6 +423,66 @@ input[type="number"] {
   background-color: #f1f1f1;
 }
 /* ================================= 
+           User Center
+==================================== */
+.user-item{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user-selected{
+  border-left: 0.5rem solid #007bff;
+  font-weight: 500;
+}
+.centerPage,
+.userHead,
+.userInfo,
+.lineLogin,
+.centerPageTitle {
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+}
+.userInfo span{
+  color: gray;
+}
+#nativeLineBtn {
+  max-width: 280px;
+}
+#managesTitle,
+#followsTitle,
+.assignManager,
+.manager {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.managesDiv,
+.followsDiv {
+  display: flex;
+}
+.managesDiv span,
+.followsDiv span {
+margin-right: auto;
+}
+.toggle-content,
+.delete-btn{
+  width: 30px;
+  height: 30px;
+  border: 1px solid gray;
+  border-radius: 50%;
+  background-color: white;
+  margin: 0 0.2rem;
+}
+.delete-btn{
+  display: none;
+}
+
+
+/* ================================= 
         Timeline Container
 ==================================== */
 .divShow {
@@ -452,9 +515,9 @@ input[type="number"] {
   cursor: pointer;
   font-weight: bolder;
 }
-.posts {
+.posts,
+.posts h3 {
   margin-top: 30px;
-  
 }
 .post img,
 .post video {
