--- a/client/views/partials/nav.ejs
+++ b/client/views/partials/nav.ejs
@@ -7,7 +7,7 @@
       alt=""
       loading="lazy"
     />
-    小小時光
+    我的小小時光
   </a>
 
   <div class="btn-group">    
@@ -16,8 +16,7 @@
         <img class="account" src="/public/images/member.png" alt="User Account">
       </button>
       <div class="dropdown-menu" style="left: -70px;">
-        <a class="dropdown-item" href="#"><%= user.id%></a>
-        <!-- <a class="dropdown-item">User Setting</a> -->
+        <a class="dropdown-item" href="/timeline/profile">管理中心</a>
         <a class="dropdown-item logout" href="/logout">登出</a>
       </div>
     <% } %>    
