--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -297,6 +297,7 @@ input[type="number"] {
 .post-content,
 .age-tree {
   height: auto;
+  min-height: 100%;
 }
 .baby-list {
   flex: 0 0 20%;
@@ -479,6 +480,28 @@ margin-right: auto;
 }
 .delete-btn{
   display: none;
+}
+.assignManager{
+  display: flex;
+}
+.assignManager select{
+  flex-grow: 2;
+  margin-right: 1rem;
+}
+.followsList{
+  display: block;
+  width: 75%;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 
