--- a/client/views/partials/babyAgeTree.ejs
+++ b/client/views/partials/babyAgeTree.ejs
@@ -22,7 +22,9 @@
   <div class="fixedBtn toTop">
     <a href="#"><i class="fa-solid fa-chevron-up"></i></a>    
   </div>
+  <% if (user.lineId !== "") { %>
   <div class="fixedBtn robot">
     <a class="addMyBot" href="#"><i class="fa-solid fa-robot"></i></a>    
   </div>
+  <% } %>
 </div>
