--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -75,7 +75,7 @@
             <%- include ("partials/babyHealthBlock") %>
           </div>
         </div>
-        <%- include ("partials/babyAgeTree") %>
+        <%- include ("partials/babyAgeTree", { user }) %>
       </div>
     </div>
   </body>
