--- a/client/views/partials/userProfileInfo.ejs
+++ b/client/views/partials/userProfileInfo.ejs
@@ -1,6 +1,6 @@
 <div class="centerPage userProfile">
   <div class="userHead">
-    <img src="<%=user.picture%>" alt="headtshot" style="width: 50px; height: 50px;">
+    <img src="<%=user.picture%>" alt="headtshot" style="border-radius: 50%; width: 50px; height: 50px;">
   </div>
   <div class="userInfo">
     <h2><%=user.name%></h2>
