--- a/client/views/partials/userUpdateBaby.ejs
+++ b/client/views/partials/userUpdateBaby.ejs
@@ -9,7 +9,7 @@
     </div>
     <div id="manages" class="mb-4">
       <% for (let i=0 ; i< managerData.length; i++) { %>
-        <div class="card mb-2">
+        <div class="card mb-2" value="<%=managerData[i].babyId%>">
           <div class="card-header managesDiv">
             <img
               src="<%=managerData[i].babyHeadshot%>"
@@ -21,25 +21,26 @@
                 margin-right: 1rem;
               "
             />
-            <span style="margin-right: auto;" value="<%=managerData[i].babyId%>"><%=managerData[i].babyName%></span>
+            <span style="margin-right: auto;"><%=managerData[i].babyName%></span>
             <button class="btn btn-sm toggle-content"><i class="fa-solid fa-angle-down"></i></button>                   
-            <button class="btn btn-sm delete-btn" title="移除照護權"><i class="fa-solid fa-xmark"></i></button>                        
+            <button class="btn btn-sm delete-btn rmUserManager-btn" title="移除照護權"><i class="fa-solid fa-xmark"></i></button>                        
           </div>
           <div class="card-body manager-content" style="display: none;" value="<%=managerData[i].babyId%>">
             <div class="managerList">
               <h5>照護權限列表</h5>
               <div class="list-group-item assignManager" style="border: none;">
+                <h5 style="display: flex;">寶寶親友：</h5>
                 <select id="managerSelect" class="followsList" >
                   <!-- Add more product options here -->
                   <% managerData[i].otherFollows.forEach((follower) => { %>
                   <option value="<%=follower.userId%>"><%=follower.userName%></option>
                   <% }); %>
                 </select>
-                <button class="btn btn-sm btn-success">賦予照護權</button>
+                <button class="btn btn-sm btn-success addFamilyManager-btn">賦予照護權</button>
               </div>
               <ul class="list-group mb-1">
                 <% managerData[i].otherManagers.forEach((manager) => { %>
-                  <li class="list-group-item manager" value="<%=manager.userId%>"><%=manager.userName%><button class="btn btn-sm btn-danger rmManager-btn">移除照護權</button></li>
+                  <li class="list-group-item manager" value="<%=manager.userId%>"><%=manager.userName%><button class="btn btn-sm btn-danger rmFamilyManager-btn">移除照護權</button></li>
                 <% }); %>
               </ul>
             </div>
@@ -91,14 +92,18 @@
           </div>
         </div>
       <% } %>
-      </div>
-      <div id="followsTitle">
-        <h4>追蹤寶寶</h4>
-        <button class="btn btn-sm btn-primary edit-btn">編輯</button>
-      </div>
+      <% if (managerData.length === 0) { %>
+        <h5 class="card" style="margin: auto; padding: 1.5rem 0.5rem; color: gray;">無任何照護寶寶</h5>
+      <% } %>
+    </div>
+    <div id="followsTitle">
+      <h4>追蹤寶寶</h4>
+      <button class="btn btn-sm btn-primary edit-btn">編輯</button>
+    </div>
+    <div id="follows">
       <% for (let i=0 ; i< followsData.length; i++) { %>
-      <div class="card mb-2 followsRow">
-        <div class="card-header followsDiv">
+      <div class="card mb-2" value="<%=followsData[i].babyId%>">
+        <div class="card-header followsDiv" >
           <img
             src="<%=followsData[i].babyHeadshot%>"
             alt="babyshot"
@@ -110,9 +115,13 @@
             "
           />        
           <span style="margin-right: auto;"><%=followsData[i].babyName%></span>
-          <button class="btn btn-sm delete-btn" title="取消追蹤"><i class="fa-solid fa-xmark"></i></button>
+          <button class="btn btn-sm delete-btn unFollowBaby-btn" title="取消追蹤"><i class="fa-solid fa-xmark"></i></button>
         </div>
       </div>
       <% } %>
+      <% if (followsData.length === 0) { %>
+        <h5 class="card" style="margin: auto; padding: 1.5rem 0.5rem; color: gray;">無任何追蹤寶寶</h5>
+      <% } %>
+    </div>
   </div>
 </div>
