--- a/client/views/partials/userFirstFollow.ejs
+++ b/client/views/partials/userFirstFollow.ejs
@@ -6,27 +6,11 @@
         class="sign-control"
           id="inputRole"
           name="babyRole"
-          value=""
+          value="family"
         />
-            <option value="manager">父母</option>
             <option value="family">家人</option>
             <option value="fans">粉絲</option>
         </select>
-    </div>
-    <br />
-    <div class="sign-group">
-      <label for="inputCall">稱呼
-    </label>
-      <input
-        class="sign-control"
-        type="text"
-        id="inputCall"
-        placeholder="寶寶怎麼稱呼您?"
-        name="call"
-        value="媽媽"
-        maxlength="10"
-        required
-      />
     </div>
     <br />
     <div class="sign-group">
@@ -37,7 +21,6 @@
         id="inputBabyId"
         placeholder="請輸入寶寶代碼"
         name="babyId"
-        value="1682294400000"
         maxlength="20"
         required
       />
