--- a/client/views/partials/userNewBaby.ejs
+++ b/client/views/partials/userNewBaby.ejs
@@ -8,23 +8,8 @@
             name="babyRole"
             value="manager"
           />
-              <option value="manager">父母</option>
+              <option value="manager">照護者</option>
           </select>
-      </div>
-      <br />
-      <div class="sign-group">
-        <label for="inputBabyCall">稱呼
-      </label>
-        <input
-          class="sign-control"
-          type="text"
-          id="inputBabyCall"
-          placeholder="寶寶怎麼稱呼您?"
-          name="babyCall"
-          value="媽媽"
-          maxlength="10"
-          required
-        />
       </div>
       <br />
       <div class="sign-group">
@@ -36,7 +21,6 @@
           placeholder="請輸入寶寶名稱"
           name="babyName"
           maxlength="10"
-          value="Ivy"
           required
         />
       </div>
@@ -47,7 +31,7 @@
             class="sign-control"
             id="inputBabyGender"
             name="babyGender"
-            value=""
+            value="boy"
         />
             <option value="boy">男孩兒</option>
             <option value="girl">女孩兒</option>
