--- a/client/views/partials/babyList.ejs
+++ b/client/views/partials/babyList.ejs
@@ -29,7 +29,7 @@
     </li>
     <% }%>
     <li class="list-group-item text-center">
-      <button class="btn btn-primary" id="addBabyBtn">追蹤寶寶</button>
+      <button class="btn btn-primary" id="addBabyBtn">新增追蹤寶寶</button>
     </li>
   </ul>
 </div>
