--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -102,7 +102,7 @@
             </div>
             <hr style="width: 80%; margin: auto" />
             <!-- user new follow -->
-            <%- include ("partials/userFirstFollow")%>
+            <%- include ("partials/userFirstFollow", { user })%>
             <!-- user new baby -->
             <%- include ("partials/userNewBaby")%>
           </div>
