--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -264,7 +264,8 @@ input[type="number"] {
   margin: auto;
 }
 .home-guide{
-  width: auto;
+  max-width: 800px;
+  width: 100%;
   height: auto;
   margin: auto 5rem;
 }
@@ -282,7 +283,9 @@ input[type="number"] {
   align-items: center;
 }
 .guide-row {
-  width: 75%;
+  max-width: 600px;
+  width: 100%;
+  padding: 0 0.5rem;
   display: flex;
   justify-content: space-between;
 }
