--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -9,7 +9,7 @@
     <%- include ("partials/nav", { user }) %>
     <!-------- myMoments Guideline ------------>
     <div class="myGuidelineDiv <%=newFollow%>">
-      <div class="" >
+      <div class="home" >
         <div class="home-guide">
           <div class="cancelGuideline">
             <img id="cancelGuideline" src="/public/images/cancel_icon.png" alt="cancel" >
@@ -25,7 +25,7 @@
             <div class="section">
               <h6><b>操作介紹</b></h6>
               <ul>
-                <li>1. 點擊左方按鈕：擁有寶寶ID可追蹤寶寶動態，新手爸媽可新增寶寶建立寶寶頁面</li>
+                <li>1. 點擊左方按鈕：擁有寶寶ID可追蹤寶寶動態，新手爸媽可新增寶寶建立頁面</li>
                 <li>2. LINE 登入使用者可點選右下角機器人掃描二維條碼加入小時光服務</li>
                 <li>3. 照護者可依照指令格式開始使用小時光服務機器人紀錄寶寶生活</li>
                 <li>4. 點選右上方使用者開啟管理中心，可管理照護權限及寶寶追蹤狀態</li>
@@ -41,6 +41,7 @@
                     <li>照護者可賦予或移除家人關係的照護權</li>
                     <li>照護者可透過小時光服務機器人紀錄寶寶作息</li>
                     <li>粉絲僅能瀏覽寶寶生活動態，無法使用機器人</li>
+                    <li>一般登入使用者僅能以粉絲權限使用小時光服務</li>
                   </ul>
                 </div>
                 <div class="guide-col">
