revise font-size in guideline page

--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -19,7 +19,7 @@
               <h5 style="font-weight: bolder; color: #007bff;">小時光使用指南</h5>
               <br>
               <span>針對有小孩的家庭，提供全家人簡易紀錄寶寶作息及生活點滴的使用平台</span>
-              <span style="display: block;">寶寶專屬的小天地，瀏覽成長照片、影片, 紀錄會心一笑的生活日誌以及生活作息</span>
+              <span style="display: block;">寶寶專屬的小天地，瀏覽成長照片、影片，紀錄會心一笑的生活日誌以及生活作息</span>
               <span style="display: block;">小時光協助新手爸媽度過艱困的新生兒時期，也給全家人一個暖心回憶的空間</span>
             </div>
             <div class="section">
@@ -46,7 +46,7 @@
                 </div>
                 <div class="guide-col">
                   <h6><b>指令格式</b></h6>
-                  <ul style="font-size: smaller;">
+                  <ul>
                       <li>牛奶(ml)：M 160</li>
                       <li>副食(ml)：F 50</li>
                       <li>睡覺(hr)：S 10</li>
