--- a/client/views/notFound.ejs
+++ b/client/views/notFound.ejs
@@ -8,11 +8,8 @@
     <%- include ("partials/nav", { user }) %>
     <main>
       <div class="home">
-        <div class="error" style="width: 70%;">
-          <p><%=errorMessage%></p>
-          <div class="errorImage">
-              <img src="/public/images/serverError.jpg" alt="">
-          </div>
+        <div class="errorImage" style="width: 60%;">
+            <img src="/public/images/notFound.jpg" alt="">
         </div>
       </div>
     </main>
