revise message display to boostrap alert and show different color in different case

--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="vLine"></div>
         <div class="home-col2">
-          <div class="message" style="margin-bottom: 1rem"></div>
+          <div id="loginMessage"></div>
           <div class="fromGroup">
             <div class="icon" style="padding: 0.75rem">
               <img
