--- a/client/views/timeline.ejs
+++ b/client/views/timeline.ejs
@@ -33,28 +33,20 @@
             </div>
             <div class="section">
               <div class="guide-row">
-                <div class="guide-col">
+                <div class="guide-col" style="flex:3;">
                   <h6><b>小時光關係設定</b></h6>
                   <ul>
                     <li>關係權限分為照護者、家人、粉絲</li>
                     <li>用戶新增寶寶時預設為照護者</li>
-                    <li>照護者可賦予或移除家人關係的照護權</li>
-                    <li>照護者可透過小時光服務機器人紀錄寶寶作息</li>
-                    <li>粉絲僅能瀏覽寶寶生活動態，無法使用機器人</li>
-                    <li>一般登入使用者僅能以粉絲權限使用小時光服務</li>
+                    <li>照護者可管理家人關係的照護權</li>
+                    <li>照護者可透過機器人紀錄寶寶作息</li>
+                    <li>一般登入使用者僅能瀏覽寶寶生活動態</li>
+                    <li><br></li>
+                    <li><b>完整服務請用LINE登入開始體驗</b></li>
                   </ul>
                 </div>
-                <div class="guide-col">
-                  <h6><b>指令格式</b></h6>
-                  <ul>
-                      <li>牛奶(ml)：M 160</li>
-                      <li>副食(ml)：F 50</li>
-                      <li>睡覺(hr)：S 10</li>
-                      <li>藥水(cc)：MED 3</li>
-                      <li>身高(cm)：H 75</li>
-                      <li>體重(kg)：W 6.5</li>
-                      <li>日記：D 妹妹長牙了</li>
-                  </ul>
+                <div class="guide-col" style="flex:2;">
+                  <img src="/public/images/line_cmd.png" alt="lineBot_commands">
                 </div>
               </div>
             </div>            
