set default login account for demo

--- a/client/views/partials/userLogin.ejs
+++ b/client/views/partials/userLogin.ejs
@@ -9,6 +9,7 @@
         placeholder="請輸入您的信箱"
         name="email"
         maxlength="50"
+        value="guest123456@fakemail.com"
         required
       />
     </div>
@@ -22,6 +23,7 @@
         placeholder="請輸入您的密碼"
         name="password"
         maxlength="50"
+        value="guest123456"
         required
       />
     </div>
